<resources>
    <string name="app_name">Proj01</string>
    <string name="logout">登出</string>
    <string name="details">帳單明細</string>
    <string name="clear">清除</string>
    <string name="summit">確認</string>
    <string name="recommend">推薦</string>
    <string name="bell">服務鈴</string>
    <string name="result">已選菜單</string>
    <string name="main_menu">主選單</string>
    <string name="action_settings">Settings</string>
    <string name="nodata">沒有資料</string>
    <string name="error">系統錯誤</string>
    <string name="submit">確認</string>
    <string name="loading">載入中</string>
    <string name="login_name">帳號：</string>
    <string name="login_name_msg">請輸入帳號</string>
    <string name="login_password">密碼：</string>
    <string name="login_password_msg">請輸入密碼</string>
    <string name="site_name">樓層：</string>
    <string name="site_name_msg">請輸入樓層</string>
    <string name="seat_name">桌號：</string>
    <string name="seat_name_msg">請輸入桌號</string>
    <string name="peoplenumber">人數：</string>
    <string name="peoplenumber_msg">請輸入人數</string>
    <string name="loginempty">欄位請勿空白</string>
    <string name="login_btn_lb1">登入</string>
    <string name="orderdatail_quantity">數量：</string>
    <string name="item_quantity">請輸入數量：</string>
    <string name="orderdatail_price">單價：</string>
    <string name="meal">套餐</string>
    <string name="simple">[單點]</string>
    <string name="set">[套餐]</string>
    <string name="billtotal">價格：</string>
    <string name="itemcontent">介紹：</string>


    <string-array name="values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
</resources>
