<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BookListActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_menu"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:id="@+id/meallayout"
        android:layout_below="@+id/textView"
        android:paddingBottom="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@color/Menu"
            android:padding="5dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/meal"
            android:id="@+id/meal"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:onClick="onBtn_MealClick"/>
        </LinearLayout>
    </LinearLayout>

    <fragment
        android:layout_width="150dp"
        android:layout_height="450dp"
        android:id="@+id/mainlistfrag"
        android:layout_below="@+id/meallayout"
        android:name="iiiedu.sirius.proj01.MainListFragment" />

    <fragment
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:id="@+id/itemlistfrag"
        android:layout_toRightOf="@+id/mainlistfrag"
        android:name="iiiedu.sirius.proj01.ItemListFragment"
        android:layout_alignTop="@+id/meallayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/result"
        android:id="@+id/textView2"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:layout_toRightOf="@+id/itemlistfrag"/>

    <ExpandableListView
        android:layout_width="250dp"
        android:layout_height="500dp"
        android:id="@+id/orderlistView"
        android:groupIndicator="@null"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/itemlistfrag" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/button"
        android:layout_below="@+id/mainlistfrag"
        android:layout_alignLeft="@+id/mainlistfrag"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:id="@+id/btn_bill"
        android:layout_toRightOf="@+id/button"
        android:layout_below="@+id/mainlistfrag"
        android:layout_margin="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summit"
        android:id="@+id/sendorderlist"
        android:layout_below="@+id/orderlistView"
        android:layout_alignRight="@+id/orderlistView"
        android:layout_margin="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clearorderlist"
        android:layout_below="@+id/orderlistView"
        android:layout_alignLeft="@+id/orderlistView"
        android:layout_margin="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bell"
        android:id="@+id/button6"
        android:layout_below="@+id/mainlistfrag"
        android:layout_alignRight="@+id/itemlistfrag"
        android:layout_margin="10dp" />

</RelativeLayout>
