<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity_login">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:adjustViewBounds="false"
        android:alpha="0.5"
        android:clickable="false"
        android:background="@drawable/login" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="520dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="LuLu餐廳"
                android:textSize="44sp"
                android:id="@+id/textView3"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="313dp"
            android:layout_height="match_parent"
            android:transitionGroup="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"></LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/imageView2"
                        android:background="@drawable/bg_select"
                        android:alpha="0.6" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="bottom"></LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/login_name"
                                android:id="@+id/textView"
                                android:layout_weight="1"
                                android:layout_marginLeft="20dp" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/account"
                                android:layout_weight="4"
                                android:hint="@string/login_name_msg"
                                android:singleLine="true"
                                android:layout_gravity="right"
                                android:layout_marginRight="20dp"
                                android:inputType="textCapCharacters"/>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:id="@+id/textView2"
                                android:layout_weight="1"
                                android:text="@string/login_password"
                                android:layout_marginLeft="20dp" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="4"
                                android:singleLine="true"
                                android:hint="@string/login_password_msg"
                                android:layout_marginRight="20dp"
                                android:id="@+id/password"
                                android:inputType="numberPassword"/>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/peoplenumber"
                                android:layout_weight="1"
                                android:layout_marginLeft="20dp" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/peoplenumber"
                                android:layout_weight="4"
                                android:hint="@string/peoplenumber_msg"
                                android:singleLine="true"
                                android:layout_gravity="right"
                                android:layout_marginRight="20dp"
                                android:inputType="number"/>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/site_name"
                                android:layout_weight="1"
                                android:layout_marginLeft="20dp" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/site_id"
                                android:layout_weight="4"
                                android:hint="@string/site_name_msg"
                                android:singleLine="true"
                                android:layout_gravity="right"
                                android:layout_marginRight="20dp"
                                android:inputType="textCapCharacters"/>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/seat_name"
                                android:layout_weight="1"
                                android:layout_marginLeft="20dp" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/seat_id"
                                android:layout_weight="4"
                                android:hint="@string/seat_name_msg"
                                android:singleLine="true"
                                android:layout_gravity="right"
                                android:layout_marginRight="20dp"
                                android:inputType="textCapCharacters"/>
                        </LinearLayout>

                        <Button
                            android:layout_width="141dp"
                            android:layout_height="wrap_content"
                            android:text="@string/login_btn_lb1"
                            android:id="@+id/login"
                            android:layout_gravity="center_horizontal"/>

                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"></LinearLayout>

    </LinearLayout>
</RelativeLayout>
